--- a/notebooks/test_pySASfit.ipynb
+++ b/notebooks/test_pySASfit.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "364c5811",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "14c7b94b",
    "metadata": {},
    "outputs": [],
@@ -52,12 +52,12 @@
     "import sys\n",
     "notebook_name = os.path.basename(os.getcwd())\n",
     "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname(os.getcwd()), '..')))\n",
-    "from pySASfit.src.io_tools.SASformats import SANSdata"
+    "from pySASfit.io_tools.SASformats import SANSdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "42e93aea",
    "metadata": {},
    "outputs": [
